# Lawyergpt

./: .dockerignore  .gitignore  CLAUDE.md  architecture.excalidraw  diagram_chat_sequence.md  diagram_ingestion_sequence.md  diagram_user_flow.md  diagrams.md  main.py  pyproject.toml  test_e2e.py
.claude/: settings.local.json
lawyergpt-engine/: .env  .env.example  pyproject.toml  test_augmentation.py  test_generation.py  test_loader.py  test_query.py  test_retrieval.py
lawyergpt-engine/chroma_db/: chroma.sqlite3
lawyergpt-engine/core/: config.py  exceptions.py  vector_store.py
lawyergpt-engine/ingestion/: chunker.py  embedder.py  loader.py  vector_store_loader.py
lawyergpt-engine/orchestration/: augmentation.py  generation.py  retriever.py
lawyergpt-engine/orchestration/prompts/: system_prompt.txt
lawyergpt-engine/scripts/: ingest.py
lawyergpt-server/: .env  .env.example  check_db.py  lawyergpt.db  pyproject.toml  test_citations.py  test_citations2.py  test_e2e.py  test_imports.py  test_relevance.py  test_ssl.py
lawyergpt-server/app/: main.py
lawyergpt-server/app/core/: config.py  exceptions.py  logging.py
lawyergpt-server/app/database/: db.py
lawyergpt-server/app/middleware/: cors.py  error_handler.py
lawyergpt-server/app/models/: __init__.py  citation.py  conversation.py  document.py  message.py
lawyergpt-server/app/routes/: conversations.py  documents.py  health.py  messages.py
lawyergpt-server/chroma_db/: chroma.sqlite3
lawyergpt-server/tests/: conftest.py  test_conversations.py  test_documents.py  test_health.py  test_messages.py
(+45 files in other folders)
