[project]
name = "lawyergpt-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.5.0",
    "openai>=1.40.0",
    "pypdf>=4.3.0",
    "unstructured[pdf]>=0.15.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "truststore>=0.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "orchestration", "core"]
